ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pnt-quiz-ingress
  namespace: pnt-quiz
spec:
  ingressClassName: nginx  # Updated to the recommended field
  tls:
    - hosts:
        - frontend.localhost
        - backend.localhost
      secretName: pnt-quiz-tls
  rules:
    - host: frontend.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
    - host: backend.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 3000
